[package]
name = "big_project_0"
version = "0.1.0"
authors = ["Luis Valdez <luis.valdez@affluences.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "dummy"
crate-type = ["dylib"]
